Improve the documentation of notebooks of Week-1 and Week-2

--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -7,15 +7,7 @@
    "source": [
     "# 📚 Week 1：LLM + LangChain 入門教學\n",
     "\n",
-    "歡迎來到本週課程！本單元將帶你從零開始了解大型語言模型（LLM）的基本概念，並實際體驗如何運用 LangChain 框架整合 AI 能力。\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## 🗂️ 課程章節導覽\n",
-    "\n",
-    "---\n",
-    "\n",
-    "> 💡 **提示**：按下 JupyterLab 的「目錄」按鈕（或安裝 TOC2 擴充套件），可快速跳轉章節！\n"
+    "歡迎來到本週課程！本單元將帶你從零開始了解大型語言模型（LLM）的基本概念，並實際體驗如何運用 LangChain 框架整合 AI 能力。"
    ]
   },
   {
@@ -74,45 +66,6 @@
     "2. conda activate aicg\n",
     "3. pip install -r requirements.txt\n",
     "4. jupyter lab"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fcc71bd-ab5e-42ac-ab3a-12249917457d",
-   "metadata": {},
-   "source": [
-    "# Prompt Engineering\n",
-    "\n",
-    "> 🎯 **本章學完你將能學會什麼：**\n",
-    "> - 理解什麼是 Prompt（提示詞）及其在大型語言模型中的角色  \n",
-    "> - 學會設計具體、有角色化且目標明確的 Prompt  \n",
-    "> - 實際操作 LangChain 的 `PromptTemplate`、`ChatPromptTemplate` 並測試不同提示效果  \n",
-    "\n",
-    "\n",
-    "所謂「Prompt」，就是你給 AI 的「指令句」。  \n",
-    "想像你在跟助理對話 —— 你怎麼問，AI 就怎麼答。  \n",
-    "學會設計好的 prompt，就能讓模型更懂你、輸出更準確！\n",
-    "\n",
-    "---\n",
-    "\n",
-    "📌 **簡單例子：**\n",
-    "| Prompt | 模型回覆 |\n",
-    "|--------|-----------|\n",
-    "| 「寫一首詩」 | 輸出隨機詩句 |\n",
-    "| 「用莎士比亞風格寫一首關於程式員的詩」 | 輸出文學風格明顯的詩 |\n",
-    "\n",
-    "> 💬 提示設計的核心是「具體、角色化、有目標」。\n",
-    "     "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "da92cc62-1b7d-453a-8407-b1d3c4e928d7",
-   "metadata": {},
-   "source": [
-    "## Code Documentation\n",
-    "\n",
-    "SYSTEM: You are a helpful AI assistant and you will act as a  Google Senior Software Developer who is going to write the python code documentation. I will give you the code and you will finish the documentation for me."
    ]
   },
   {
@@ -334,7 +287,27 @@
    "id": "216956e1-29cf-49ff-8274-0dffe50ef221",
    "metadata": {},
    "source": [
-    "# Prompt Engineering\n",
+    "# 提示詞工程\n",
+    "\n",
+    "> 🎯 **本章學完你將能學會什麼：**\n",
+    "> - 理解什麼是 Prompt（提示詞）及其在大型語言模型中的角色  \n",
+    "> - 學會設計具體、有角色化且目標明確的 Prompt  \n",
+    "> - 實際操作 LangChain 的 `PromptTemplate`、`ChatPromptTemplate` 並測試不同提示效果  \n",
+    "\n",
+    "\n",
+    "所謂「Prompt」，就是你給 AI 的「指令句」。  \n",
+    "想像你在跟助理對話 —— 你怎麼問，AI 就怎麼答。  \n",
+    "學會設計好的 prompt，就能讓模型更懂你、輸出更準確！\n",
+    "\n",
+    "---\n",
+    "\n",
+    "📌 **簡單例子：**\n",
+    "| Prompt | 模型回覆 |\n",
+    "|--------|-----------|\n",
+    "| 「寫一首詩」 | 輸出隨機詩句 |\n",
+    "| 「用莎士比亞風格寫一首關於程式員的詩」 | 輸出文學風格明顯的詩 |\n",
+    "\n",
+    "> 💬 提示設計的核心是「具體、角色化、有目標」。\n",
     "\n",
     "## 1. Importing Necessary Modules (導入必要的模塊)：\n",
     "\n",
@@ -356,7 +329,7 @@
    "id": "c6340aa6-9f55-4b5a-906c-620feecb43d6",
    "metadata": {},
    "source": [
-    "## 2. Defining a System Prompt (定義系統提示):\n",
+    "## 2. 定義系統提示:\n",
     "\n",
     "這行代碼使用 PromptTemplate.from_template 方法創建了一個 system_prompt。這個模板指示 AI 以 Gordon Ramsay 的身份行事，模仿他在電視節目《地獄廚房》中的說話方式。"
    ]
@@ -366,7 +339,7 @@
    "id": "028eef83-37a2-4574-b61f-6c01485d8a1a",
    "metadata": {},
    "source": [
-    "## 人格提示/Persona Example\n",
+    "## 人格提示\n",
     "\n",
     "- Gordon Ramsay: 地獄廚房的暴躁狀態"
    ]
@@ -395,7 +368,7 @@
    "id": "eb47aed0-d02e-4590-9cdc-d31e80a74777",
    "metadata": {},
    "source": [
-    "## 3. Creating a System Message Prompt (創建系統消息提示):\n",
+    "## 3. 創建系統消息提示:\n",
     "\n",
     "這行代碼將 system_prompt 包裝在 SystemMessagePromptTemplate 中，用於生成系統消息。"
    ]
@@ -425,7 +398,7 @@
    "id": "13a526a3-b551-4ead-99d8-ab0049d8b2a3",
    "metadata": {},
    "source": [
-    "## 4. Defining a Human Prompt (定義人類提示):\n",
+    "## 4. 定義人類提示:\n",
     "\n",
     "這行代碼定義了一個 human_prompt 模板，它接收一個變量 query。這個變量在生成提示時將被用戶的輸入替換。"
    ]
@@ -447,7 +420,7 @@
    "id": "ce1ddad5-aedb-4d16-bea1-5419c5d05b2e",
    "metadata": {},
    "source": [
-    "## 5. Creating a Human Message Prompt (創建人類消息提示): \n",
+    "## 5. 創建人類消息提示: \n",
     "\n",
     "這行代碼將 human_prompt 包裝在 HumanMessagePromptTemplate 中，用於生成人類消息。"
    ]
@@ -467,7 +440,7 @@
    "id": "2ebf62b1-9932-44db-bafe-72e84c0f7120",
    "metadata": {},
    "source": [
-    "## 6. Combining the Prompts (將提示合併):\n",
+    "## 6. 將提示合併:\n",
     "\n",
     "這行代碼使用 from_messages 方法將 system_message 和 human_message 模板合併到一個 ChatPromptTemplate 中。這個模板將用於生成對話流程，首先是系統消息，然後是人類消息。"
    ]
@@ -1118,7 +1091,7 @@
    "id": "d1a05a78-b082-4ace-8005-0e3a2bdece14",
    "metadata": {},
    "source": [
-    "### 1. Importing Necessary Classes (導入必要的類):\n",
+    "### 1. 導入必要的類:\n",
     "\n",
     "- StructuredOutputParser and ResponseSchema are imported from langchain.output_parsers.\n",
     "- 從 langchain.output_parsers 導入 StructuredOutputParser 和 ResponseSchema。"
@@ -1139,7 +1112,7 @@
    "id": "35a1f896-4fee-423b-84bc-1bd842f62e79",
    "metadata": {},
    "source": [
-    "### 2. Defining Response Schemas (定義回應結構):\n",
+    "### 2. 定義回應結構:\n",
     "\n",
     "- A list named response_schemas is created, which contains instances of ResponseSchema. ResponseSchema has two attributes:\n",
     "    - name: This is the key used to retrieve the output.\n",
@@ -1173,7 +1146,7 @@
    "id": "51d3a04b-3004-4360-88c8-a51743b4fe1c",
    "metadata": {},
    "source": [
-    "### 3. Creating the Output Parser (創建輸出解析器):\n",
+    "### 3. 創建輸出解析器:\n",
     "\n",
     "- output_parser is created by calling StructuredOutputParser.from_response_schemas with the response_schemas list.\n",
     "- This parser uses the defined schemas to understand and structure the output.\n",
@@ -1207,7 +1180,7 @@
    "id": "690df7a6-d947-408a-b0f5-d34f0cad52ed",
    "metadata": {},
    "source": [
-    "### 4. Generating Format Instructions (生成格式說明):\n",
+    "### 4. 生成格式說明:\n",
     "\n",
     "- format_instructions is generated by calling output_parser.get_format_instructions().\n",
     "- These instructions specify how the output should be formatted, based on the defined schemas.\n",
