--- a/tutorial/LLM+Langchain/Week-2/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-2/notebook.ipynb
@@ -1,19 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "bef0fdeb-a495-4c91-8164-b37dfb3b9734",
-   "metadata": {},
-   "source": [
-    "1. conda create -n aicg python=3.10\n",
-    "2. conda activate aicg\n",
-    "3. pip install -r requirements.txt\n",
-    "\n",
-    "4. conda activate aicg\n",
-    "5. jupyter lab"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0ebfbfab-219f-4ea9-b24a-f7f414cf25ac",
@@ -108,7 +95,18 @@
    "id": "a8ed7ca1-3a1f-4915-a35c-2f239fa0325a",
    "metadata": {},
    "source": [
-    "### Semantic Retrieval Systems\n",
+    "# 語意檢索系統\n",
+    "\n",
+    "> 🎯 **本章學完你將能學會什麼：**\n",
+    "> - 理解「語意檢索」的核心概念與傳統單詞比對的限制  \n",
+    "> - 了解 **Word2Vec**、**GloVe** 的詞向量原理與語義空間表示方式  \n",
+    "> - 認識 **上下文詞向量（Contextual Embeddings）** 與 **Transformer 架構**  \n",
+    "> - 比較 Encoder-only（BERT）、Decoder-only（GPT）、Encoder-Decoder（T5）的差異  \n",
+    "> - 掌握如何在 Python 中使用 **Gensim**、**LangChain** 與 **FAISS** 進行語意檢索  \n",
+    "> - 能將文字資料轉換為向量嵌入，並建立可檢索的語意資料庫  \n",
+    "> - 應用語意搜尋於詩文檢索、文本對比與自動化問答等任務  \n",
+    "\n",
+    "\n",
     "\n",
     "使用單詞比對搜尋的問題:\n",
     "\n",
@@ -116,7 +114,7 @@
     "\n",
     "我們知道這在意思上非常的相近，但是單詞比對不一樣就是不一樣，差一點點都不行\n",
     "\n",
-    "#### Solution:\n",
+    "## 解決方法:\n",
     "\n",
     "Word2Vec\n",
     "\n",
@@ -311,6 +309,7 @@
    "source": [
     "### Contrastive Learning\n",
     "\n",
+    "\n",
     "1. 目標\n",
     "\n",
     "在嵌入（Embedding）學習中，我們希望把輸入資料（如文字、圖片、音訊）映射到一個向量空間中，使得：\n",
@@ -485,39 +484,114 @@
    "id": "74fcc1c6-026e-4afc-8f87-fb57b8733f7e",
    "metadata": {},
    "source": [
-    "### 進階應用\n",
+    "## 🧠 理解 FAISS 中的 IVF-PQ\n",
     "\n",
-    "在上述應用中，這是 IndexFlatL2 (暴力搜索法): 查詢時要跟資料庫裡的 所有向量 算一次 L2 距離，然後排序。\n",
+    "> 🎯 **本章學完你將能學會什麼：**\n",
+    "> - 理解 **FAISS（Facebook AI Similarity Search）** 的基本架構與用途  \n",
+    "> - 分辨不同索引類型：**IndexFlatL2、IVF、PQ、IVF+PQ**  \n",
+    "> - 了解倒排索引（IVF）與產品量化（PQ）的運作機制  \n",
+    "> - 掌握 **IVF+PQ** 結合後的優勢：高速檢索與記憶體壓縮  \n",
+    "> - 能在程式中建立、訓練與儲存 FAISS 索引  \n",
+    "> - 學會如何使用 LangChain 的 **FAISS VectorStore** 封裝檢索流程  \n",
+    "> - 理解三種檢索策略（similarity、score threshold、MMR）與實際應用差異  \n",
+    "> - 具備分析向量空間結構與相似度分佈的能力  \n",
     "\n",
-    "- 優點：結果是精確最近鄰 (exact nearest neighbor)。\n",
-    "- 缺點：當資料量大（例如上百萬筆）時，速度和記憶體消耗都會變得很可怕。\n",
-    "- \n",
+    "本筆記說明 **FAISS**（Facebook AI Similarity Search）的索引與搜尋策略，特別聚焦在 **IVF**、**PQ** 及其組合 **IVF+PQ**。\n",
     "\n",
-    "解決方法: 近似最近鄰 (ANN, Approximate Nearest Neighbor)\n",
+    "---\n",
     "\n",
-    "這時候就會用到 FAISS 提供的進階索引，例如：\n",
+    "### 🧩 IndexFlatL2\n",
     "\n",
-    "1. IVF (Inverted File Index)\n",
+    "**機制：**  \n",
+    "最簡單的暴力搜尋索引 — 查詢時，會計算查詢向量與 **資料庫中所有向量** 的 **L2 距離**，然後排序結果。\n",
     "\n",
-    "先把空間聚類成 nlist 個「簇」(cluster)\n",
+    "**優點：**\n",
+    "- 提供 **精確最近鄰**。\n",
+    "- 不需要訓練（可即插即用）。\n",
     "\n",
-    "搜索時 只搜尋最接近的幾個簇 (而不是全量)\n",
+    "**缺點：**\n",
+    "- 對於大規模資料集（百萬或數十億向量）非常 **慢**，且 **耗記憶體**。\n",
     "\n",
-    "節省時間，但會犧牲一點準確度。\n",
+    "---\n",
     "\n",
-    "2. PQ (Product Quantization)\n",
+    "### ⚙️ IVF（Inverted File Index 倒排索引）\n",
     "\n",
-    "把向量分段，壓縮成較低位元的表示（近似原始向量）\n",
+    "**概念：**  \n",
+    "將向量空間分成 `nlist` 個 cluster（通常使用 **k-means** 聚類）。  \n",
+    "每個 cluster 有一個 **倒排列表**（inverted list），儲存分配到該 cluster 的向量。\n",
     "\n",
-    "降低記憶體用量，提升搜尋效率。\n",
+    "**查詢流程：**\n",
+    "1. 使用 **coarse quantizer**（通常是 `IndexFlatL2`）找出與查詢向量最接近的 `nprobe` 個 cluster。  \n",
+    "2. 僅在這些 cluster 中進行細部搜尋，而非整個資料庫。\n",
     "\n",
-    "3. IVF + PQ\n",
+    "**優點：**\n",
+    "- 透過忽略大部分資料庫，大幅 **加快搜尋速度**。\n",
+    "- 適合 **大規模資料集**。\n",
     "\n",
-    "IVF 限縮搜尋範圍\n",
+    "**缺點：**\n",
+    "- 精準度略下降（取決於 `nlist` 與 `nprobe` 的設定）。\n",
+    "- 需要訓練（k-means）。\n",
     "\n",
-    "PQ 降低計算量\n",
+    "---\n",
     "\n",
-    "是大規模語義搜尋中常見的組合。"
+    "### 📦 PQ（Product Quantization 產品量化）\n",
+    "\n",
+    "**概念：**  \n",
+    "將向量壓縮成緊湊表示，以便更快地進行近似距離計算。\n",
+    "\n",
+    "**步驟：**\n",
+    "1. 將向量（維度 `d`）分成 `m` 個 **子向量**，每個長度為 `d/m`。\n",
+    "2. 為每組子向量訓練一個 **codebook**（centroids 集合），通常大小為 `2^bits`。\n",
+    "3. 將每個子向量替換為最接近 centroid 的 **索引值**。\n",
+    "\n",
+    "如此一來，一個浮點向量就可以轉換為一串小整數編碼，大幅減少記憶體使用量。\n",
+    "\n",
+    "**查詢時：**\n",
+    "- 不直接計算向量距離，而是使用查詢向量各子向量與 codebook 的 **查表距離**。\n",
+    "- 將每個子向量的距離加總作為近似距離。\n",
+    "\n",
+    "**優點：**\n",
+    "- **大幅壓縮記憶體**（可縮小 10–100 倍）。\n",
+    "- **加速距離計算**。\n",
+    "\n",
+    "**缺點：**\n",
+    "- 會產生量化誤差，降低精確度。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🔗 IVF + PQ（混合索引）\n",
+    "\n",
+    "**概念：**\n",
+    "- **IVF**：縮小搜尋範圍（只看部分 cluster）。\n",
+    "- **PQ**：壓縮 cluster 內向量，加快運算。\n",
+    "\n",
+    "**結果：**\n",
+    "- **搜尋速度快**、**記憶體效率高**。\n",
+    "- 精確度略有下降，但通常可接受。\n",
+    "\n",
+    "**典型應用：**  \n",
+    "大規模 **語意搜尋**、**embedding 檢索** 或 **影像相似度搜尋**，需要高效率搜尋大量向量。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ✅ 總結\n",
+    "\n",
+    "| 索引類型       | 描述                                   | 精準度 | 速度 | 記憶體 | 是否需要訓練 |\n",
+    "|----------------|----------------------------------------|---------|------|--------|----------------|\n",
+    "| **IndexFlatL2** | 精確暴力搜尋                           | ✅ 高    | ❌ 慢 | ❌ 大   | 否             |\n",
+    "| **IVF**         | 基於 cluster 的倒排搜尋                 | ⚖️ 中   | ✅ 快 | ✅ 較小 | 是             |\n",
+    "| **PQ**          | 向量量化與壓縮                          | ⚖️ 中   | ✅ 快 | ✅ 最小 | 是             |\n",
+    "| **IVF + PQ**    | Cluster + Quantization（混合）          | ⚖️ 中   | ✅✅ 非常快 | ✅✅ 緊湊 | 是             |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "> 🧭 **簡而言之：**  \n",
+    "> - `IndexFlatL2` → 精確但慢。  \n",
+    "> - `IVF` → 篩選搜尋範圍。  \n",
+    "> - `PQ` → 壓縮向量與加速計算。  \n",
+    "> - `IVF + PQ` → 結合兩者，實現**快速、節省記憶體**的近似最近鄰搜尋。\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -543,10 +617,11 @@
     "# -----------------------------\n",
     "nlist = 1  # 聚類中心數量\n",
     "m = 1      # PQ 分段數\n",
+    "bits = 8\n",
     "quantizer = faiss.IndexFlatL2(dimension)  # 基礎量化器\n",
     "\n",
     "# IndexIVFPQ：IVF + PQ 索引\n",
-    "index = faiss.IndexIVFPQ(quantizer, dimension, nlist, m, 8)  # 8 = 每段位元\n",
+    "index = faiss.IndexIVFPQ(quantizer, dimension, nlist, m, bits)\n",
     "index.train(vectors)\n",
     "index.add(vectors)"
    ]
@@ -592,7 +667,7 @@
    "source": [
     "## Runtime Configuration\n",
     "\n",
-    "What we learned last week: Runtime Configuration."
+    "複習上星期學到的東西: 透過Runtime Configuration動態的調整搜索器的參數"
    ]
   },
   {
@@ -636,7 +711,11 @@
   {
    "cell_type": "markdown",
    "id": "f81ce668-c24a-44c8-adfb-209b1118faa5",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Three search types:\n",
     "\n",
@@ -648,7 +727,11 @@
   {
    "cell_type": "markdown",
    "id": "e9b11f7d-93ab-438a-ad4f-28a621becdb3",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### 2. similarity_score_threshold (相似性分數閾值):\n",
     "\n",
@@ -721,7 +804,7 @@
    "id": "7f2855c8-f541-48b3-b0c6-0968bf79e004",
    "metadata": {},
    "source": [
-    "### How to get the scores of the documents?"
+    "### 如何取得文檔的分數?"
    ]
   },
   {
@@ -746,6 +829,16 @@
     "query = \"傍晚心情鬱悶，登高望景。眼前的夕陽極為壯麗，但它即將沉沒，這就像人生或理想，美好卻轉瞬即逝\"\n",
     "\n",
     "vectorstore._similarity_search_with_relevance_scores(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c71cd261-f11f-4bc5-bf94-1ab6b7609307",
+   "metadata": {},
+   "source": [
+    "我們可以看到透過_similarity_search_with_relevance_scores 我們可以取得 cosine similarity 的分數\n",
+    "\n",
+    "### 試試看翻譯跟原文的相似度有多少"
    ]
   },
   {
@@ -953,7 +1046,7 @@
    "id": "5a5abb7f-e451-48ed-9feb-9d6d48c57cf1",
    "metadata": {},
    "source": [
-    "這是因為FAISS 使用 Post-filter: 先使用相似度排序前fetch_k，然後再用filter過濾。疑似Bug\n",
+    "這是因為FAISS 使用 Post-filter: 先使用相似度排序前fetch_k，然後再用filter過濾。\n",
     "\n",
     "可以試試看其他的檢索器，像是QRANT (沒正式在工作上使用過)"
    ]
@@ -965,7 +1058,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qU langchain-qdrant"
+    "# !pip install -qU langchain-qdrant"
    ]
   },
   {
@@ -993,13 +1086,15 @@
    "outputs": [],
    "source": [
     "from langchain_qdrant import QdrantVectorStore, RetrievalMode\n",
-    "from qdrant_client import QdrantClient\n",
+    "from qdrant_client import QdrantClient, models\n",
     "from qdrant_client.http.models import Distance, VectorParams\n",
+    "\n",
     "\n",
     "client = QdrantClient(path=\"/tmp/langchain_qdrant\")\n",
     "\n",
     "collection_name = \"demo_collection\"\n",
     "\n",
+    "# Qdrant server初始化\n",
     "try:\n",
     "    client.create_collection(\n",
     "        collection_name=collection_name,\n",
@@ -1024,24 +1119,22 @@
     "\n",
     "Remove collection:\n",
     "client.delete_collection(collection_name=\"demo_collection\")\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33c57e67-cd86-4fa7-ad63-e809583bfde5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from qdrant_client import models\n",
+    "\"\"\"\n",
     "\n",
+    "# 將數據上載到server裡\n",
     "client.upsert(\n",
     "    collection_name=\"demo_collection\",\n",
     "    points=[models.PointStruct(id=idx + 1,\n",
     "                               vector=vector,\n",
     "                               payload={\"page_content\": document.page_content,\n",
     "                                        \"metadata\": document.metadata}) for idx, (document, vector) in enumerate(zip(documents, vectors))]\n",
+    ")\n",
+    "\n",
+    "# 建立 vectorstore\n",
+    "vectorstore_QVS = QdrantVectorStore(\n",
+    "    client=client,\n",
+    "    collection_name=\"demo_collection\",\n",
+    "    embedding=embeddings,\n",
     ")"
    ]
   },
@@ -1050,21 +1143,7 @@
    "id": "52fe9b53-efa3-4550-adf3-8e062da4dccc",
    "metadata": {},
    "source": [
-    "Can you create a vectorstore with the from_documents method?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83750dc6-20bf-4ccb-8234-efdac2893d42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectorstore_QVS = QdrantVectorStore(\n",
-    "    client=client,\n",
-    "    collection_name=\"demo_collection\",\n",
-    "    embedding=embeddings,\n",
-    ")"
+    "### Challenge: 你可以使用method from_documents 來創立一個vectorstore嗎?"
    ]
   },
   {
@@ -1076,6 +1155,14 @@
    "source": [
     "retriever_QVS = vectorstore_QVS.as_retriever(search_type=\"similarity\", search_kwargs={\"k\": 1})\n",
     "retriever_QVS.invoke(\"夕陽無限好\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c7baf60-5140-4e6a-8c7d-0db9a4ede807",
+   "metadata": {},
+   "source": [
+    "### Qdrant透過filter過濾內容"
    ]
   },
   {
@@ -1182,20 +1269,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d64ce4-cebe-45ca-a338-0938e1454e7e",
-   "metadata": {},
-   "source": [
-    "# **** 預計第一個小時結束 ****"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ffc50ad2-8895-4c02-8ccc-55ed3565f783",
    "metadata": {},
    "source": [
     "# LangChain Expression Language (LCEL)\n",
     "\n",
-    "高效的寫Pipeline: 用流水線的方式不斷的把結果傳到下一個節點上"
+    "> 🎯 **本章學完你將能學會什麼：**\n",
+    "> - 理解 **LangChain Expression Language (LCEL)** 的設計理念與語法特性  \n",
+    "> - 掌握 LCEL 如何以「鏈式運算子 `|`」實現資料流的模組化組合  \n",
+    "> - 熟悉 **Runnable** 的核心概念，了解各類 Runnable（如 `RunnableLambda`、`RunnableParallel`、`RunnablePassthrough`）的用途  \n",
+    "> - 學會構建多階段 Pipeline：從 Prompt → LLM → Parser 的自動化串接  \n",
+    "> - 能運用 LCEL 進行 **生成 → 評估 → 改進（Reflection Agent）** 的循環架構設計  \n",
+    "> - 理解 **Runtime Configuration** 的動態參數傳遞方法，實現可重組與條件化檢索  \n",
+    "> - 掌握 LCEL 在 **語意檢索（Semantic Retriever）** 中的整合實務  \n",
+    "> - 能夠將同步與異步流（Synchronization / Asynchronization）轉換，以提升高併發執行效率  \n",
+    "> - 學會使用 LCEL 建立 **平行化工作流（RunnableParallel）** 與 **自定義任務鏈**  \n",
+    "> - 了解如何利用 LLM 實現 **程式生成（Code Generation）** 與自動執行（`exec()`）  \n",
+    "> - 綜合應用 LCEL 的思維，設計可擴展、可維護的 AI 工作流架構  \n",
+    "\n",
+    "\n",
+    "**LangChain Expression Language (LCEL)** 是一種強大且靈活的語法，用於建構高效的資料處理流水線（Pipeline）。它允許開發者以鏈式（Chain）方式將多個操作（如檢索、生成、處理）無縫串聯，將前一個節點的輸出作為下一個節點的輸入，形成流暢的資料流。LCEL 的設計強調模組化、可讀性和可維護性，特別適用於結合大型語言模型（LLM）與外部工具（如向量資料庫、API）來解決複雜任務。\n",
+    "\n",
+    "## 為什麼使用 LCEL？\n",
+    "- **高效能與可擴展性**：透過異步處理（Asynchronous Flow）與並行執行（Parallelization），LCEL 能在高併發場景下顯著提升效率。\n",
+    "- **簡潔的語法**：使用 `|` 運算子串聯操作，代碼簡潔且易於理解，類似於 Unix 的管道（Pipe）概念。\n",
+    "- **整合性強**：LCEL 能輕鬆整合 LangChain 的各種組件（如 Retriever、PromptTemplate、OutputParser）與外部工具（如 FAISS、Qdrant）。\n",
+    "\n",
+    "## 核心概念\n",
+    "1. **Runnable 物件**：LCEL 的基本單位，代表一個可執行的操作（如檢索、模型推理、資料轉換）。常見的 Runnable 包括 `RunnablePassthrough`（保留輸入）、`RunnableLambda`（自訂函數）等。\n",
+    "2. **流水線操作**：使用 `|` 將多個 Runnable 串聯，前一階段的輸出自動傳遞到下一階段。例如：`prompt | model | parser`。\n",
+    "4. **並行與異步**：支援 `RunnableParallel` 同時執行多個獨立任務，以及 `ainvoke` 方法進行異步處理，適用於高吞吐量應用。"
    ]
   },
   {
@@ -1215,7 +1318,7 @@
    "id": "b48a82ea-35b8-4252-976c-ea418dd3848d",
    "metadata": {},
    "source": [
-    "## Reflection Base\n",
+    "## Base of Reflection Agent\n",
     "\n",
     "- https://huggingface.co/blog/Kseniase/reflection\n",
     "- https://github.com/langchain-ai/langgraph/blob/main/docs/docs/tutorials/reflection/reflection.ipynb\n",
@@ -1402,6 +1505,8 @@
    "id": "1c13cd44-58dc-4669-8995-72d5b15e5f46",
    "metadata": {},
    "source": [
+    "assign 就像是 在 Pipeline 中加入一個「中途站」或「資訊亭」，在主數據流（例如 article, title）繼續向前時，它同時執行一個子流程（例如 feedback_pipeline），並將子流程的結果（feedback）以新的 Key 注入到主數據流中，以便後續步驟使用。\n",
+    "\n",
     "這是Generate - Reflection的雛型。可以隨需求將它的架構弄得更複雜。"
    ]
   },
@@ -1635,7 +1740,7 @@
    "id": "ba419208-49a4-48b6-b96a-626963d9e798",
    "metadata": {},
    "source": [
-    "### Parallelize steps\n",
+    "### 平行運算 (Parallelize steps)\n",
     "\n",
     "將複數但相互獨立的流程同時啟動"
    ]
@@ -1664,7 +1769,7 @@
    "id": "21acde53-82c9-451b-ae23-373a10544e13",
    "metadata": {},
    "source": [
-    "### Asynchronization (異步流)\n",
+    "### 異步流 (Asynchronization)\n",
     "\n",
     "當一個流程進入等待狀態（例如等待外部 API 回應、讀寫檔案、資料庫查詢），這個工作會「讓出執行權」給事件迴圈 (event loop)。\n",
     "此時事件迴圈可以去執行其他等待中的工作，而不是卡在原地。\n",
@@ -2337,6 +2442,30 @@
    "source": [
     "# Model Evaluation\n",
     "\n",
+    "> 🎯 **本章學完你將能學會什麼：**\n",
+    "> - 理解「模型評估（Model Evaluation）」在 AI 專案生命週期中的關鍵角色  \n",
+    "> - 能分辨並監測三種常見的模型變化類型：  \n",
+    ">   - **Model Drift**：模型行為隨版本或訓練資料改變的偏移  \n",
+    ">   - **Data Drift**：輸入數據分佈隨時間演化而產生的變異  \n",
+    ">   - **Model Resilience**：模型面對干擾（perturbation）時的穩定性與魯棒性    \n",
+    "> - 能實作 **Input Perturbation（輸入干擾）** 技術，模擬實際噪音情境  \n",
+    ">   - 文字錯誤（typos, case change, unicode homoglyphs）  \n",
+    ">   - 同義改寫（paraphrasing）  \n",
+    ">   - 隨機噪音與對抗攻擊（adversarial perturbations）  \n",
+    "> - 理解 **Consistency Checking** 的概念：如何不依賴人工評估進行自我驗證  \n",
+    ">   - 輸出語義相似度檢查（cosine similarity via embeddings）  \n",
+    ">   - 自洽性（Self-consistency）與多次重試一致性量測  \n",
+    ">   - 翻譯回譯（Round-trip Validation）策略  \n",
+    "> - 能運用向量化工具（如 **SBERT / HuggingFace Embeddings**）進行輸出相似度比較  \n",
+    "> - 學會使用 **Perplexity** 衡量文本流暢度與自然度（以 GPT-2 為基準模型）  \n",
+    "> - 熟悉 **同步與異步批次運算（batch / abatch）** 技巧，提高測試效率  \n",
+    "> - 能撰寫自動化流程：  \n",
+    ">   - 清潔輸入 → 污染輸入 → 產生輸出 → 嵌入相似度 → Perplexity 評估  \n",
+    "> - 具備分析模型在擾動下語義穩定性與語言流暢性的能力  \n",
+    "> - 能以資料科學思維建立自動化模型評估系統，為模型持續優化提供量化依據  \n",
+    "\n",
+    "\n",
+    "\n",
     "最近在找工作。評估(Evaluation)算是一個蠻被看重的技能。\n",
     "\n",
     "  1. Model Drift (模型隨著迭代的變化)\n",
@@ -2503,9 +2632,9 @@
     "- Cleaned input -> Cleaned output\n",
     "- Dirty input -> \"Dirty\" output\n",
     "\n",
-    "Compare the similarity between cleaned output and dirty output\n",
+    "#### Cosine similarity\n",
     "\n",
-    "Cosine Similarity"
+    "使用 Cosine similarity衡量輸出的相似度"
    ]
   },
   {
@@ -2705,13 +2834,15 @@
    "id": "85869253-e996-4291-a41b-51613c0b2488",
    "metadata": {},
    "source": [
-    "Perplexity Measurement:\n",
+    "### Perplexity Measurement:\n",
     "\n",
     "對於輸入進行干擾後，利用Perplexity (不是那個AI搜索公司) 計算輸出的流暢性\n",
     "\n",
-    "Lower perplexity: more fluent (lower surprise)\n",
+    "Perplexity 數值越高，表示模型對這段文字感到『越困惑』，亦即這段文字的流暢性或自然度越低；反之，數值越低則越流暢\n",
     "\n",
-    "這裡我們使用GPT2模型作為量測工具。硬體夠力的話也可以選擇更大的模型像是Llama-3"
+    "這裡我們使用GPT2模型作為量測工具。硬體夠力的話也可以選擇更大的模型像是Llama-3。\n",
+    "\n",
+    "如果 Cosine Similarity 很高，但 Perplexity 差距很大，代表模型在受到干擾後輸出的語意沒變，但語言組織能力下降了。"
    ]
   },
   {
@@ -2772,7 +2903,7 @@
    "source": [
     "### Model Drift\n",
     "\n",
-    "固定住輸入，然後使用perturbed inputs。"
+    "固定住輸入，然後使用不同的模型輸出。最後比較輸出。"
    ]
   }
  ],
